# meson-dep-test

./: generator.d  lib.d  meson.build
